# QAwesomeIcon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: mainwindow.cpp  mainwindow.h  mainwindow.ui  spritesheetparamsdialog.cpp  spritesheetparamsdialog.h
src/: qawesomeicon.cpp  qawesomeicon.h  qawesomeicon_global.h
src/animation/: qawesomeanimationbackend.cpp  qawesomeanimationbackend.h  qawesomeanimationmanager.cpp  qawesomeanimationmanager.h
src/animation/backends/: qawesomegifbackend.cpp  qawesomegifbackend.h  qawesomespritebackend.cpp  qawesomespritebackend.h  qawesomesvgbackend.cpp  qawesomesvgbackend.h
src/icon/: qawesomeiconupdater.cpp  qawesomeiconupdater.h
src/threading/: qawesomeanimationworker.cpp  qawesomeanimationworker.h
src/utils/: qawesomeutils.cpp  qawesomeutils.h
